--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
 			<img id="myExtraFiftyImage" src="extra50.png" type="image/jpg" style="display: none;">
 			<img id="myMedicineImage" src="circleMedicine.png" type="image" style="display: none;">
 			<img id="myMonsterImage" src="monsterImage.png" type="gif" style="display: none;">
+			<img id="winnerImage" src="winner.jpeg" type="gif" style="display: none;">
+			<img id="loserImage" src="loser.jpg" type="gif" style="display: none;">
+			<img id="gameCompletedImage" src="gameCompleted.jpg" type="gif" style="display: none;">
+			<img id="betterImage" src="better.jpg" type="gif" style="display: none;">
 
 			<div id ="playGame">
 				<canvas id="canvas" height="600" width="600"></canvas>
