--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 			<strong><a href="mailto:yuvalmoryosef3@gmail.com">send mail to yuval</a></strong>
 			or
 			<strong><a href="mailto:adiashk@post.bgu.ac.il">send mail to adi</a></strong>
-			<button class="tablink" onclick="swapDiv('settings')" type="button">settings</button>
-	</footer>
+<!-- 			<button class="tablink" onclick="swapDiv('settings')" type="button">settings</button>
+ -->	</footer>
 </body>
 
 </html>
